checking inbound calling1

--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="74b285">  <td>20/01/15 14:58:38</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;utilityclass.createReport()[pri:0, instance:com.test.Testscript@2038ae61]">&gt;&gt;createReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1740189450</td>   <td></td> </tr>
-<tr bgcolor="7be3c5">  <td>20/01/15 14:58:38</td>   <td>297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testscript.openBrowser()[pri:0, instance:com.test.Testscript@2038ae61]">openBrowser</td> 
-  <td>main@1740189450</td>   <td></td> </tr>
-<tr bgcolor="74b285">  <td>20/01/15 15:00:10</td>   <td>91839</td> <td>&nbsp;</td><td title="&lt;&lt;utilityclass.flush()[pri:0, instance:com.test.Testscript@2038ae61]">&lt;&lt;flush</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1740189450</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>20/01/17 12:39:50</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;utilityclass.createReport()[pri:0, instance:com.test.Testscript@5f9d02cb]">&gt;&gt;createReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="a48474">  <td>20/01/17 12:39:50</td>   <td>161</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testscript.login()[pri:0, instance:com.test.Testscript@5f9d02cb]">login</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>20/01/17 12:41:09</td>   <td>79614</td> <td>&nbsp;</td><td title="&lt;&lt;utilityclass.flush()[pri:0, instance:com.test.Testscript@5f9d02cb]">&lt;&lt;flush</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@846238611</td>   <td></td> </tr>
 </table>
