--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="beef9d">  <td>20/01/17 12:39:50</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;utilityclass.createReport()[pri:0, instance:com.test.Testscript@5f9d02cb]">&gt;&gt;createReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>20/01/17 12:39:50</td>   <td>161</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testscript.login()[pri:0, instance:com.test.Testscript@5f9d02cb]">login</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>20/01/17 12:41:09</td>   <td>79614</td> <td>&nbsp;</td><td title="&lt;&lt;utilityclass.flush()[pri:0, instance:com.test.Testscript@5f9d02cb]">&lt;&lt;flush</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>20/01/27 14:40:11</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;utilityclass.createReport()[pri:0, instance:com.test.Testscript@14acaea5]">&gt;&gt;createReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@597255128</td>   <td></td> </tr>
+<tr bgcolor="e8a876">  <td>20/01/27 14:40:12</td>   <td>365</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testscript.print()[pri:1, instance:com.test.Testscript@14acaea5]">print</td> 
+  <td>main@597255128</td>   <td></td> </tr>
+<tr bgcolor="e8a876">  <td>20/01/27 14:40:21</td>   <td>9637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testscript.testing()[pri:2, instance:com.test.Testscript@14acaea5]">testing</td> 
+  <td>main@597255128</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>20/01/27 14:40:33</td>   <td>21565</td> <td>&nbsp;</td><td title="&lt;&lt;utilityclass.flush()[pri:0, instance:com.test.Testscript@14acaea5]">&lt;&lt;flush</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@597255128</td>   <td></td> </tr>
 </table>
